maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:12: error: type mismatch;
 found   : Unit
 required: Integer
        avance()
              ^Escaper:17: error: type mismatch;
 found   : Unit
 required: Integer
          avance()
                ^Escaper:21: error: type mismatch;
 found   : Unit
 required: Integer
          avance()
                ^